--- a/package.json
+++ b/package.json
@@ -10,22 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.19.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
-    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.6.4",
-    "react-native-screens": "^3.22.1",
-    "react-redux": "^8.1.1",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.2"
+    "react-native-screens": "^3.22.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
